--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_movies">movies</string>
     <string name="title_peliculas">Peliculas</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
