--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_movies">movies</string>
     <string name="title_peliculas">Peliculas</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_details_movie">Detalles</string>
 </resources>
